# SMPlayer2

./: CMakeLists.txt  smplayer2.desktop
src/: CMakeLists.txt  actionseditor.cpp  actionseditor.h  assstyles.cpp  assstyles.h  basegui.cpp  basegui.h  baseguiplus.cpp  baseguiplus.h  clhelp.cpp  clhelp.h  colorutils.cpp  colorutils.h  config.h  core.cpp  core.h  defaultgui.cpp  defaultgui.h  desktopinfo.cpp  desktopinfo.h  deviceinfo.cpp  deviceinfo.h  discname.cpp  discname.h  errordialog.h  extensions.cpp  extensions.h  favoriteeditor.cpp  favoriteeditor.h  favorites.cpp  favorites.h  filechooser.h  filedialog.h  filepropertiesdialog.h  filesettings.cpp  filesettings.h  filesettingsbase.h  filesettingshash.cpp  filesettingshash.h  filters.cpp  (+113 more)
src/dialogs/: about.cpp  about.h  errordialog.cpp  filedialog.cpp  filepropertiesdialog.cpp  inputdvddirectory.cpp  timedialog.h  vdpauproperties.h
src/findsubtitles/: findsubtitlesconfigdialog.cpp  findsubtitlesconfigdialog.h  findsubtitleswindow.cpp  findsubtitleswindow.h  findsubtitleswindow.ui  osparser.cpp  osparser.h  simplehttp.cpp  simplehttp.h  subchooserdialog.cpp  subchooserdialog.h
src/findsubtitles/filedownloader/: filedownloader.cpp  filedownloader.h
src/gui/: basegui.cpp  basegui.h  baseguiplus.cpp  baseguiplus.h  defaultgui.cpp  defaultgui.h  minigui.cpp  minigui.h
src/gui/mpcgui/: mpcgui.cpp  mpcgui.h  mpcstyles.h
src/mpcgui/: mpcgui.cpp  mpcgui.h  mpcstyles.cpp
src/mpris2/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h  mpris2.cpp  mpris2.h
src/prefui/: prefadvanced.h  prefadvanced.ui  prefassociations.cpp  prefassociations.h  prefdrives.h  prefdrives.ui  preferencesdialog.cpp  preferencesdialog.h  prefgeneral.cpp  prefgeneral.h  prefgeneral.ui  prefinput.h  prefinput.ui  prefinterface.h  prefinterface.ui  prefperformance.h  prefplaylist.cpp  prefplaylist.h  prefsubtitles.cpp  prefsubtitles.h  prefsubtitles.ui  preftv.h
src/videopreview/: videopreview.cpp  videopreview.h  videopreviewconfigdialog.cpp  videopreviewconfigdialog.h  videopreviewconfigdialog.ui
src/widgets/: actionseditor.cpp  actionseditor.h  audioequalizer.cpp  audioequalizer.h  eqslider.cpp  eqslider.h  eqslider.ui  filechooser.cpp  floatingwidget.cpp  floatingwidget.h  lineedit_with_icon.h  logwindow.cpp  logwindow.h  mplayerwindow.h  mycombobox.cpp  playlist.cpp  playlist.h  playlistdock.h  selectcolorbutton.h  timeslider.cpp  timeslider.h  tristatecombo.h  verticaltext.cpp  verticaltext.h
